# worktech-

./: .gitignore  CADERNO_DE_TESTES.md  README.md
backend/: .env.example  create_professor.py  migrate_schema.py  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: __init__.py  auth.py  health.py  professor.py  treinos.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: models.py  session.py
backend/app/repositories/: auth_repository.py
backend/app/schemas/: auth.py  professor.py
backend/app/services/: auth_service.py
backend/tests/: test_auth_contract.py  test_health.py  test_rbac_helpers.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: http.ts
frontend/src/auth/: AuthContext.tsx  storage.ts  types.ts
frontend/src/components/: ProtectedRoute.tsx  RoleRoute.tsx
frontend/src/pages/: AdminPage.tsx  CheckinPage.tsx  EventsPage.tsx  HomePage.tsx  LoginPage.tsx  ModalidadesPage.tsx  NotificationsPage.tsx  PresencaPage.tsx  ProfilePage.tsx  RecommendationsPage.tsx
